projects/demo/src/styles.less
@import '@taiga-ui/styles/taiga-ui-global';
@import '@taiga-ui/addon-doc/styles/markdown';

body {
    margin: 0;
}

html,
body {
    height: 100%;
}

markdown {
    li li {
        // nested list
        color: var(--tui-text-02);

        &:before {
            content: '\2014';
            left: 0;
            top: auto;
            width: auto;
            height: auto;
            background-color: transparent;
        }
    }
}

